--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -5,6 +5,7 @@
             <media name="viewport" content="width=device-width, initial-scale=1"></media>
             <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css"/>
             <link href="dist/style.min.css" rel="stylesheet">
+            <link href="vendor/leaflet/dist/leaflet.css" rel="stylesheet">
       </head>
       <body>
             <div ng-view class="container">
@@ -19,18 +20,9 @@
             <script src="vendor/spin.js/spin.js"></script>
             <script src="vendor/angular-loading-spinner/angular-loading-spinner.js"></script>
             <script src="vendor/angular-spinner/angular-spinner.min.js"></script>
+            <script src="vendor/leaflet/dist/leaflet.js"></script>
+            <script src="vendor/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
 
             <script src="dist/scripts.min.js"></script>
-            <!-- <script src="src/features/featureModule.js"></script>
-            <script src="src/pages/pagesModule.js"></script>
-            <script src="src/features/D3/d3Factory.js"></script>
-            <script src="src/features/D3/graph/graphDirective.js"></script>
-            <script src="src/features/D3/graph/graphController.js"></script>
-            <script src="src/features/D3/pieChart/pieChartController.js"></script>
-            <script src="src/features/D3/pieChart/pieChartDirective.js"></script>
-            <script src="src/pages/home/homeController.js"></script>
-            <script src="src/pages/home/homeService.js"></script>
-            <script src="src/pages/analysis/analysisController.js"></script>
-            <script src="src/pages/analysis/analysisService.js"></script> -->
       </body>
 </html>
