updated line graph to use dates

--- a/frontend/app/src/features/D3/graph/graph.html
+++ b/frontend/app/src/features/D3/graph/graph.html
@@ -1,1 +1,2 @@
 <link href="src/features/D3/graph/graphStyle.css" rel="stylesheet">
+<p class="dateText">{{startDate | date:'EEE d MMM yyyy h:mm a'}} - {{endDate | date:'EEE d MMM yyyy h:mm a'}}</p>
