--- a/frontend/app/src/pages/analysis/analysis.html
+++ b/frontend/app/src/pages/analysis/analysis.html
@@ -1,6 +1,6 @@
 <h1 class="term">{{term}}</h1>
 <div class="graphContainer">
-      <graph data="data"></graph>
+      <graph data="data" width="1000"></graph>
       <pieChart data="pie" radius="100" ng-show="!showLoading"></pieChart>
 
 
