--- a/frontend/app/src/pages/home/home.html
+++ b/frontend/app/src/pages/home/home.html
@@ -11,7 +11,11 @@
             </div>
 
             <input id="searchTerm" type="text" placeholder="Search Term" class="form-control" ng-model="term.word" />
-            <input type="submit" id="search_term_button" ng-click="searchTerm()" class="search_term" value="Search Term" />
+            <div ng-click="searchTerm()" class="search_btn">
+                  <p>
+                        Search Term
+                  </p>
+            </div>
       </form>
 
 </div>
