locks fields after submitting a term

--- a/frontend/app/src/features/D3/graph/graph.html
+++ b/frontend/app/src/features/D3/graph/graph.html
@@ -1,2 +1,2 @@
 <link href="src/features/D3/graph/graphStyle.css" rel="stylesheet">
-<p class="dateText">The setiment trends between {{startDate | date:'EEE d MMM yyyy h:mm a'}} and {{endDate | date:'EEE d MMM yyyy h:mm a'}}</p>
+<p class="dateText">The sentiment trends between {{startDate | date:'EEE d MMM yyyy h:mm a'}} and {{endDate | date:'EEE d MMM yyyy h:mm a'}}</p>
